// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using SWD_Project.Data;

#nullable disable

namespace SWD_Project.Migrations
{
    [DbContext(typeof(ApplicationDbContext))]
    [Migration("20260322081759_FixSkillCategory")]
    partial class FixSkillCategory
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "8.0.23")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("MentorCVSkill", b =>
                {
                    b.Property<int>("MentorCVsId")
                        .HasColumnType("int");

                    b.Property<int>("SkillsId")
                        .HasColumnType("int");

                    b.HasKey("MentorCVsId", "SkillsId");

                    b.HasIndex("SkillsId");

                    b.ToTable("MentorCVSkill");

                    b.HasData(
                        new
                        {
                            MentorCVsId = 1,
                            SkillsId = 1
                        },
                        new
                        {
                            MentorCVsId = 1,
                            SkillsId = 3
                        },
                        new
                        {
                            MentorCVsId = 1,
                            SkillsId = 5
                        });
                });

            modelBuilder.Entity("SWD_Project.Models.Entities.ChatBotLog", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("datetime2");

                    b.Property<string>("GeminiResponse")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int?>("UserId")
                        .HasColumnType("int");

                    b.Property<string>("UserPrompt")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.HasIndex("UserId");

                    b.ToTable("ChatBotLogs");
                });

            modelBuilder.Entity("SWD_Project.Models.Entities.MentorCV", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("Bio")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("ExperienceYears")
                        .HasColumnType("int");

                    b.Property<int>("MentorId")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("MentorId");

                    b.ToTable("MentorCVs");

                    b.HasData(
                        new
                        {
                            Id = 1,
                            Bio = "Senior .NET Developer with 5 years of experience.",
                            ExperienceYears = 5,
                            MentorId = 2
                        });
                });

            modelBuilder.Entity("SWD_Project.Models.Entities.Request", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("Content")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("datetime2");

                    b.Property<int>("MenteeId")
                        .HasColumnType("int");

                    b.Property<int?>("MentorId")
                        .HasColumnType("int");

                    b.Property<int>("Status")
                        .HasColumnType("int");

                    b.Property<string>("Title")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.HasIndex("MenteeId");

                    b.HasIndex("MentorId");

                    b.ToTable("Requests");

                    b.HasData(
                        new
                        {
                            Id = 1,
                            Content = "I want to learn MVC",
                            CreatedAt = new DateTime(2026, 3, 22, 15, 17, 57, 952, DateTimeKind.Local).AddTicks(1690),
                            MenteeId = 1,
                            MentorId = 2,
                            Status = 0,
                            Title = "Learn ASP.NET Core"
                        },
                        new
                        {
                            Id = 2,
                            Content = "Need frontend mentor",
                            CreatedAt = new DateTime(2026, 3, 22, 15, 17, 57, 952, DateTimeKind.Local).AddTicks(1700),
                            MenteeId = 1,
                            MentorId = 2,
                            Status = 1,
                            Title = "Learn React"
                        },
                        new
                        {
                            Id = 3,
                            Content = "Database optimization",
                            CreatedAt = new DateTime(2026, 3, 22, 15, 17, 57, 952, DateTimeKind.Local).AddTicks(1702),
                            MenteeId = 1,
                            MentorId = 2,
                            Status = 2,
                            Title = "Learn SQL"
                        });
                });

            modelBuilder.Entity("SWD_Project.Models.Entities.Skill", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<int>("CategoryId")
                        .HasColumnType("int");

                    b.Property<string>("Description")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<bool>("IsActive")
                        .HasColumnType("bit");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.HasKey("Id");

                    b.HasIndex("CategoryId");

                    b.ToTable("Skills");

                    b.HasData(
                        new
                        {
                            Id = 1,
                            CategoryId = 1,
                            Description = "Ngôn ngữ C#",
                            IsActive = true,
                            Name = "C#"
                        },
                        new
                        {
                            Id = 2,
                            CategoryId = 1,
                            Description = "Ngôn ngữ Java",
                            IsActive = true,
                            Name = "Java"
                        },
                        new
                        {
                            Id = 3,
                            CategoryId = 2,
                            Description = "Web framework của Microsoft",
                            IsActive = true,
                            Name = "ASP.NET Core"
                        },
                        new
                        {
                            Id = 4,
                            CategoryId = 2,
                            Description = "Thư viện frontend UI",
                            IsActive = true,
                            Name = "React"
                        },
                        new
                        {
                            Id = 5,
                            CategoryId = 3,
                            Description = "Hệ quản trị CSDL quan hệ",
                            IsActive = true,
                            Name = "SQL Server"
                        });
                });

            modelBuilder.Entity("SWD_Project.Models.Entities.SkillCategory", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("Description")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.HasKey("Id");

                    b.ToTable("SkillCategories");

                    b.HasData(
                        new
                        {
                            Id = 1,
                            Description = "Core programming languages",
                            Name = "Programming Languages"
                        },
                        new
                        {
                            Id = 2,
                            Description = "Web and App Frameworks",
                            Name = "Frameworks"
                        },
                        new
                        {
                            Id = 3,
                            Description = "Relational and NoSQL DBs",
                            Name = "Databases"
                        });
                });

            modelBuilder.Entity("SWD_Project.Models.Entities.Transaction", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<decimal>("Amount")
                        .HasColumnType("decimal(18,2)");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("datetime2");

                    b.Property<int>("Status")
                        .HasColumnType("int");

                    b.Property<int>("UserId")
                        .HasColumnType("int");

                    b.Property<string>("VnPayTranId")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.HasIndex("UserId");

                    b.ToTable("Transactions");
                });

            modelBuilder.Entity("SWD_Project.Models.Entities.User", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("Email")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("FullName")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("PasswordHash")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("Role")
                        .HasColumnType("int");

                    b.Property<string>("Username")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.ToTable("Users");

                    b.HasData(
                        new
                        {
                            Id = 1,
                            Email = "mentee1@gmail.com",
                            FullName = "Nguyen Van A",
                            PasswordHash = "123456",
                            Role = 1,
                            Username = "mentee1"
                        },
                        new
                        {
                            Id = 2,
                            Email = "mentor@gmail.com",
                            FullName = "Tran Van B",
                            PasswordHash = "123456",
                            Role = 2,
                            Username = "mentor1"
                        });
                });

            modelBuilder.Entity("MentorCVSkill", b =>
                {
                    b.HasOne("SWD_Project.Models.Entities.MentorCV", null)
                        .WithMany()
                        .HasForeignKey("MentorCVsId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("SWD_Project.Models.Entities.Skill", null)
                        .WithMany()
                        .HasForeignKey("SkillsId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("SWD_Project.Models.Entities.ChatBotLog", b =>
                {
                    b.HasOne("SWD_Project.Models.Entities.User", "User")
                        .WithMany()
                        .HasForeignKey("UserId");

                    b.Navigation("User");
                });

            modelBuilder.Entity("SWD_Project.Models.Entities.MentorCV", b =>
                {
                    b.HasOne("SWD_Project.Models.Entities.User", "Mentor")
                        .WithMany()
                        .HasForeignKey("MentorId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Mentor");
                });

            modelBuilder.Entity("SWD_Project.Models.Entities.Request", b =>
                {
                    b.HasOne("SWD_Project.Models.Entities.User", "Mentee")
                        .WithMany("Requests")
                        .HasForeignKey("MenteeId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("SWD_Project.Models.Entities.User", "Mentor")
                        .WithMany()
                        .HasForeignKey("MentorId")
                        .OnDelete(DeleteBehavior.Restrict);

                    b.Navigation("Mentee");

                    b.Navigation("Mentor");
                });

            modelBuilder.Entity("SWD_Project.Models.Entities.Skill", b =>
                {
                    b.HasOne("SWD_Project.Models.Entities.SkillCategory", "Category")
                        .WithMany("Skills")
                        .HasForeignKey("CategoryId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Category");
                });

            modelBuilder.Entity("SWD_Project.Models.Entities.Transaction", b =>
                {
                    b.HasOne("SWD_Project.Models.Entities.User", "User")
                        .WithMany()
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("User");
                });

            modelBuilder.Entity("SWD_Project.Models.Entities.SkillCategory", b =>
                {
                    b.Navigation("Skills");
                });

            modelBuilder.Entity("SWD_Project.Models.Entities.User", b =>
                {
                    b.Navigation("Requests");
                });
#pragma warning restore 612, 618
        }
    }
}
